Sabores Mariano Guardia Changelog


Sabores Mariano Guardia V 0.8)
-Ahora la página funciona en altas resoluciones
	-Se aumentaron los textos y títulos según su resolucion
	-Se mejoro las cajas, grids, acordeones para ajustarse a alta resolucion
-Se quitó el carrousel de la página index para ver todas las representadas al mismo tiempo
-Agregada las siguientes representadas:
	-Pampa Creation
	-Arla foods
	-DSM
-Se cambió de lugar el código del botón muestras de _imagenes a _SaboresIngredientes y se achico la escala de hover
-Se escalo los vinculos del navegador para que se agranden en altas resoluciones
-En sabores e ingredientes se mejoro el responsive de las cajas

Sabores Mariano Guardia V 0.7)
-Se rediseño la página de contacto
-Se borro codigos repetidos en index y parrafos y titulos


Sabores Mariano Guardia V 0.61)

-Se despixelo el logo y se le paso a formato png
-Se bajo la altura de grids para resolucion en index entre 799px y 1050px para que las imagenes se amolden de forma correcta
-Se aumento el tamaño de texto en contacto, se bajo el ancho a 80% y se añadio media querry para llevarlo a 100 ante 850px

Sabores Mariano Guardia V 0.6)

-Se añadió enviar.php para enviar mails al formulario.
-Se creo una pagina HTML nueva a la que se redirecciona una vez enviado el formulario de contacto.

Sabores Mariano Guardia V 0.5)

---------GENERAL--------

-Se creó la documentación de cambios changelog.txt
-Se agregaron las keywords para motores de busquedas según cada sección
-Se agregó una descripción según cada sección para que figuré en los motores de búsqueda
-Se cambió el título de cada página

---------VARIABLES---------

-Se creó la variable $colorHover para cambiar siempre que haya un hover
-Se agrego @mixin para ser una variable de colores degradados y un hover para enfatizar la posición del mouse
-Se agrego como @extend en variables la clase .flexMid, la cual es repetida, cuenta con:
	display: flex;
    	align-items: center;