@@ -262,7 +262,8 @@
   font-weight: bold;
   font-family: 'Bellota';
   padding-left: 10px;
-  padding-right: 10px; }
+  padding-right: 10px;
+  word-wrap: break-word; }
 
 .section_SeI {
   margin-bottom: 100px; }
@@ -275,31 +276,46 @@
     transform: scale(1.05, 1.05); }
 
 /*MAYORES RESOLUCIONES*/
+@media (min-width: 1400px) and (max-width: 1875px) {
+  .lista {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; }
+  .muestra {
+    width: 205px;
+    height: 205px; }
+  .btn_muestra {
+    font-size: 20px; } }
+
 @media (min-width: 1875px) and (max-width: 2500px) {
   .lista {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
   .muestra {
     width: 240px;
-    height: 240px; } }
+    height: 240px; }
+  .btn_muestra {
+    font-size: 25px; } }
 
 @media (min-width: 2500px) and (max-width: 3000px) {
   .lista {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
   .muestra {
     width: 330px;
-    height: 330px; } }
+    height: 330px; }
+  .btn_muestra {
+    font-size: 35px; } }
 
 @media (min-width: 3000px) {
   .lista {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
   .muestra {
     width: 400px;
-    height: 400px; } }
+    height: 400px; }
+  .btn_muestra {
+    font-size: 40px; } }
 
 /*MOBILE-----------Listas pag SABORES E INGREDIENTES--------*/
 /*MOBILE-----------Listas pag SABORES E INGREDIENTES--------*/
 /*MOBILE-----------Listas pag SABORES E INGREDIENTES--------*/
-@media (min-width: 1250px) and (max-width: 1875px) {
+@media (min-width: 1250px) and (max-width: 1400px) {
   .lista {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; }
   .muestra {
@@ -499,7 +515,9 @@
 
 /*----------------boostrap items-----------------*/
 .card {
-  margin: 20px; }
+  margin: 20px;
+  min-width: 10rem;
+  max-width: 10rem; }
   .card-text {
     color: white; }
   .card-body {
@@ -510,6 +528,22 @@
 .footer_card {
   color: black;
   transform: scale(1.3, 1.3); }
+
+/* ALTAS RESOLUCIONES */
+@media (min-width: 1400px) and (max-width: 1700px) {
+  .card {
+    min-width: 12rem;
+    max-width: 12rem; } }
+
+@media (min-width: 1700px) and (max-width: 2600px) {
+  .card {
+    min-width: 15rem;
+    max-width: 15rem; } }
+
+@media (min-width: 2600px) {
+  .card {
+    min-width: 20rem;
+    max-width: 20rem; } }
 
 .section_contacto {
   display: flex;
@@ -570,6 +604,37 @@ input[type="submit"] {
   background-color: transparent;
   color: white;
   box-shadow: 10px 7px white; }
+
+/* ALTAS RESOLUCIONES */
+@media (min-width: 1400px) and (max-width: 1700px) {
+  .field_contacto {
+    height: 700px; }
+  .form_box {
+    font-size: 25px; }
+  label {
+    font-size: 25px; }
+  .aside_contacto {
+    height: 700px; } }
+
+@media (min-width: 1700px) and (max-width: 2600px) {
+  .field_contacto {
+    height: 850px; }
+  .form_box {
+    font-size: 35px; }
+  label {
+    font-size: 35px; }
+  .aside_contacto {
+    height: 850px; } }
+
+@media (min-width: 2600px) {
+  .field_contacto {
+    height: 1000px; }
+  .form_box {
+    font-size: 45px; }
+  label {
+    font-size: 45px; }
+  .aside_contacto {
+    height: 1000px; } }
 
 /*MOBILE--------------CONTACTO---------------*/
 /*MOBILE--------------CONTACTO---------------*/
@@ -648,17 +713,17 @@ footer {
 .labelHamburguesa {
   display: none; }
 
-@media (min-width: 1700px) and (max-width: 2500px) {
+@media (min-width: 1400px) and (max-width: 2500px) {
   li {
-    transform: scale(1.5, 1.5); } }
+    font-size: 25px; } }
 
 @media (min-width: 2500px) {
   li {
-    transform: scale(2.2, 2.2); } }
+    font-size: 40px; } }
 
 @media (min-width: 3200px) {
   li {
-    transform: scale(3, 3); } }
+    font-size: 50px; } }
 
 /* MOBILE--------------------Header, footer y navegación-------------------*/
 /* MOBILE--------------------Header, footer y navegación-------------------*/
