@@ -110,7 +110,7 @@
     <section class="section_aditivos"> <!-- Con esto necesito trabajar con bases de datos -->
 
         <box class="box_aditivos">
-            <div class="card" style="min-width: 10rem; max-width: 10rem;">
+            <div class="card">
                 <div class="card-body" style="background-color: green;">
                     <p class="card-text">INS 100 CURCUMINA</p>
                     <p class="card-text"></p>
@@ -137,7 +137,7 @@
             </div>
         </box>
         <box class="box_aditivos">
-            <div class="card" style="min-width: 10rem; max-width: 10rem;">
+            <div class="card">
                 <div class="card-body" style="background-color: red;">
                     <p class="card-text">INS 102 TARTRAZINA</p>
                     <p class="card-text"></p>
@@ -164,7 +164,7 @@
             </div>
         </box>
         <box class="box_aditivos">
-            <div class="card" style="min-width: 10rem; max-width: 10rem;">
+            <div class="card">
                 <div class="card-body" style="background-color: rgb(206, 206, 0);">
                     <p class="card-text">INS 203 SORBATO DE CALCIO</p>
                     <p class="card-text"></p>
@@ -191,7 +191,7 @@
             </div>
         </box>
         <box class="box_aditivos">
-            <div class="card" style="min-width: 10rem; max-width: 10rem;">
+            <div class="card">
                 <div class="card-body" style="background-color:red">
                     <p class="card-text">INS 951 ASPARTAMO</p>
                     <p class="card-text"></p>
