@@ -195,7 +195,8 @@
 
 .card{
     margin: 20px;
-
+    min-width: 10rem; 
+    max-width: 10rem;
     &-text{
         color: white;
     }
@@ -212,4 +213,27 @@
 .footer_card{
    color: black;
    transform: scale(1.3,1.3);
+}
+
+/* ALTAS RESOLUCIONES */
+
+@media (min-width:1400px) AND (max-width:1700px){
+    .card{
+        min-width: 12rem;
+        max-width: 12rem;
+    }
+}
+
+@media (min-width:1700px) AND (max-width:2600px){
+    .card{
+        min-width: 15rem;
+        max-width: 15rem;
+    }
+}
+
+@media (min-width:2600px){
+    .card{
+        min-width: 20rem;
+        max-width: 20rem;
+    }
 }
