@@ -69,22 +69,22 @@ footer{
     display: none;
 } 
 
-
-@media (min-width:1700px) AND (max-width:2500px){
+@media (min-width:1400px) AND (max-width:2500px){
     li{
-        transform: scale(1.5,1.5);
+        font-size: 25px;
     }
 }
 
+
 @media (min-width:2500px){
     li{
-        transform: scale(2.2,2.2);
+        font-size: 40px;
     }
 }
 
 @media (min-width:3200px){
     li{
-        transform: scale(3,3);
+        font-size: 50px;
     }
 }
 
